# AlgorithmPlatform

./: README.md  pyproject.toml  requirements.txt
configs/: dataset_assembly101.yaml  infer_multi.yaml  infer_single.yaml  sop.yaml  sop_basic.yaml  train.yaml  train_assembly101.yaml  train_assembly101_medium.yaml
docs/: DATASET_STRATEGY.md  DOWNLOAD_GUIDE.md  ENVIRONMENT.md  GETTING_STARTED.md  USAGE.md
scripts/: bootstrap_assembly101.py  check_env.py  download_assembly101_subset.py  infer_multi.py  infer_multi_sim.py  infer_single.py  inspect_assembly101_annotations.py  inspect_dataset.py  prepare_assembly101.py  prepare_dataset.py  select_assembly101_recordings.py  train.py
src/algorithm_platform/data/: manifest.py  video.py
src/algorithm_platform/inference/: multi_sim.py  single.py
src/algorithm_platform/models/: action_recognizer.py
src/algorithm_platform/streaming/: events.py  fsm.py  window.py
src/algorithm_platform/training/: train_videomae.py
src/algorithm_platform/utils/: config.py
