[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algorithm-platform"
version = "0.1.0"
description = "Assembly action recognition and concurrent inference platform prototype"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
